Added utilities __pycache__ and .pyc to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .idea/*
 __pycache__/*
 package/__pycache__/*
+package/utilities/__pycache__/*
 package/ui/__pycache__/*
 package/ui/widgets/__pycache__/*
 *.pyc
 package/*.pyc
+package/utilities/*.pyc
 package/ui/*.pyc
 package/ui/widgets/*.pyc
